ws_new/log/build_2025-04-28_11-11-32/navigation/stderr.log
  File "/home/thomas/MobileRobot/ws_new/install/navigation/lib/python3.12/site-packages/navigation/gps_save_xy_subscriber.py", line 38
    goal_pose.header.frame_id = 
                                ^
SyntaxError: invalid syntax

